Bug fix for the hero video not appearing on lessons.html. Bug fix for overflow issues in the footer of each page when icons are hovered over.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ body {
     font-family: "Montserrat", sans-serif;
     color: #fff;
     letter-spacing: 1px;
+    overflow-x: hidden;
 }
 
 a {
